--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.1",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0"
   },
